--- a/public/css/sidebar.css
+++ b/public/css/sidebar.css
@@ -29,3 +29,12 @@ i {
    justify-content: center;
    align-items: center;
 }
+.table-container{
+   margin-top: 4%;
+}
+a#edit-roles{
+   color: rgba(0, 0, 0, 0.671);
+}
+a#edit-roles:hover{
+  color: rgba(0, 0, 0);
+}
