--- a/public/css/sidebar.css
+++ b/public/css/sidebar.css
@@ -10,13 +10,7 @@
    opacity: 1;
    color: black;
 }
-.navigation ul li{
-   position: relative;
-   z-index: 1;
-   
 
-
-}
 i {
    font-size: 2rem;
 }
@@ -31,6 +25,7 @@ i {
 }
 .table-container{
    margin-top: 4%;
+   
 }
 a#edit-roles{
    color: rgba(0, 0, 0, 0.671);
@@ -38,3 +33,9 @@ a#edit-roles{
 a#edit-roles:hover{
   color: rgba(0, 0, 0);
 }
+.card-footer{
+   
+   text-align: end;
+}
+
+
